tema4/canary-nginx-analysis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: imagina-rollouts
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: imagina-rollouts
